# RiskAxis

./: .env.example  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  REFERENCES.md  SCHEMA.md  TRD.md  UI_UX_DESIGN_BRIEF.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
config/: urls.py
config/settings/: base.py  local.py
docs/: APPFLOW.md  README.md
riskaxis/accounts/: admin.py  apps.py  models.py
riskaxis/accounts/migrations/: 0001_initial.py
riskaxis/appetite/: admin.py  apps.py  models.py
riskaxis/appetite/migrations/: 0001_initial.py
riskaxis/assessments/: admin.py  apps.py  models.py
riskaxis/assessments/migrations/: 0001_initial.py
riskaxis/assurance/: admin.py  apps.py  models.py
riskaxis/assurance/migrations/: 0001_initial.py
riskaxis/controls/: admin.py  apps.py  models.py
riskaxis/controls/migrations/: 0001_initial.py
riskaxis/core/: apps.py  models.py
riskaxis/dashboards/: apps.py  views.py
riskaxis/documents/: admin.py  apps.py  models.py
riskaxis/graph/: apps.py  tests.py  urls.py  views.py
riskaxis/incidents/: admin.py  apps.py  models.py
riskaxis/indicators/: admin.py  apps.py  models.py
riskaxis/objectives/: admin.py  apps.py  models.py
riskaxis/organization/: admin.py  apps.py  models.py
riskaxis/reviews/: admin.py  apps.py  models.py
riskaxis/risk_universe/: admin.py  apps.py  models.py
riskaxis/risks/: admin.py  apps.py  models.py
riskaxis/treatments/: admin.py  apps.py  models.py
templates/riskaxis/: base.html  dashboard.html  login.html
(+9 files in other folders)
