[project]
name = "riskaxis"
version = "0.1.0"
description = "Objective-centered Enterprise Risk Management platform built with Django."
requires-python = ">=3.11"
dependencies = [
  "Django>=5.0,<6.0",
  "djangorestframework>=3.15,<4.0",
  "dj-database-url>=2.1,<3.0",
  "gunicorn>=21.2,<23.0",
  "whitenoise>=6.6,<7.0",
  "psycopg[binary]>=3.1,<4.0",
]

[tool.setuptools.packages.find]
include = ["config*", "riskaxis*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
